<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView_tr_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/trans_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_bene_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/transaction_button_design"
                android:drawableLeft="@drawable/add_bene"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/add_bene_btn"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/third_prty_boc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/transaction_button_design"
                android:drawableLeft="@drawable/third_party_boc"
                android:paddingLeft="10dp"
                android:text="@string/add_third_party_boc"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/other_bnk_acc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/transaction_button_design"
                android:drawableLeft="@drawable/other_bank_acc"
                android:paddingLeft="10dp"
                android:text="@string/other_bank_acc_payment"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/other_bnk_credit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/transaction_button_design"
                android:drawableLeft="@drawable/other_bank_credit"
                android:paddingLeft="10dp"
                android:text="@string/other_bank_crdt_payment"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bill_pay_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/transaction_button_design"
                android:drawableLeft="@drawable/bill_pay"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/bill_payments"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>