<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdPartyTransaction"
    android:id="@+id/drawer">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
<<<<<<< HEAD
        android:layout_height="match_parent"
        tools:context=".ThirdPartyTransaction"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/third_party_main"
            android:textAlignment="center"
            android:background="@color/colorSecondary"
            android:textColor="@color/colorTertiary"
            android:textSize="25dp"
            android:textStyle="bold" />
=======
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obcp_amount_tv2" />

    <EditText
        android:id="@+id/pay_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/receiver"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obcp_pay_to_tv2" />

    <EditText
        android:id="@+id/source_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/sourceNum"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obcp_pay_from_tv2" />
>>>>>>> a9aae0709844abe712f07311a39f990d06371ff5

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" >
                <TextView
                    android:id="@+id/obcp_pay_to_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:paddingLeft="20dp"
                    android:text="@string/pay"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

<<<<<<< HEAD
                <EditText
                    android:id="@+id/pay_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/obcp_pay_to_tv2" />

                <TextView
                    android:id="@+id/obcp_pay_from_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:text="@string/source"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pay_txt" />

                <EditText
                    android:id="@+id/source_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/obcp_pay_from_tv2" />

                <TextView
                    android:id="@+id/obcp_amount_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:text="@string/amount"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/source_txt" />

                <EditText
                    android:id="@+id/amount_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/obcp_amount_tv2" />


                <TextView
                    android:id="@+id/obcp_desc_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:text="@string/desc"
                    android:textColor="@color/colorTertiary"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/amount_txt" />

                <EditText
                    android:id="@+id/desc_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/obcp_desc_tv2" />

                <LinearLayout
                    android:id="@+id/obcp_btn_placement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp" >
=======
    <TextView
        android:id="@+id/obcp_pay_to_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:paddingLeft="20dp"
        android:text="@string/pay"
        android:textColor="@color/colorTertiary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/desc_test"
        android:layout_width="398dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obcp_desc_tv2" />
>>>>>>> a9aae0709844abe712f07311a39f990d06371ff5

                    <Button
                        android:id="@+id/transferBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/proceed_button_design"
                        android:text="Continue"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
    <!---side drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawerNavigation"
        android:layout_width="match_parent"
<<<<<<< HEAD
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="50dp"
        android:background="@drawable/drawer_back_gradient"
        app:theme="@style/NavigationViewStyle"
        app:itemIconTint="@drawable/navigation_view_icon_tint_selector"
        app:itemTextColor="@drawable/navigation_view_text_selector"
        android:layout_marginRight="131dp"
        app:headerLayout="@layout/drawer_header"
        app:layout_constraintBottom_toBottomOf="parent"
=======
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="20dp"
        android:text="@string/desc"
        android:textColor="@color/colorTertiary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/amount_txt" />

    <Button
        android:id="@+id/transferBtn"
        android:layout_width="154dp"
        android:layout_height="42dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:background="@drawable/form_background"
        android:text="@string/transfer_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_test" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="410dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/third_party_main"
        android:textAlignment="center"
        android:textColor="@color/colorTertiary"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
>>>>>>> a9aae0709844abe712f07311a39f990d06371ff5
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:itemIconSize = "30sp"
        app:menu="@menu/menu_drawer">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>

